<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_title">@string/app_name</string>
    <string name="settings_summary">Geocoder Plugin settings</string>

    <string name="include_tag_title">Include Geocoder Name?</string>
    <string name="include_tag_summary">When enabled, the name of the active geocoder will be also shown on the map overlay.</string>

    <string name="address_provider_title">Set Active Geocoder…</string>
    <string name="address_provider_summary">This will take you to another settings screen, from which you should change the "Address Provider" option.</string>

    <string name="w3w_key_title">what3words API Key</string>
    <string name="w3w_key_summary">Used to authenticate for what3words geocoding. If empty, the what3words geocoder is disabled.</string>

    <string name="positionstack_key_title">PositionStack API Key</string>
    <string name="positionstack_key_summary">Used to authenticate for PositionStack geocoding. If empty, the PositionStack geocoder is disabled.</string>

    <string name="mapquest_key_title">MapQuest API Key</string>
    <string name="mapquest_key_summary">Used to authenticate for MapQuest geocoding. If empty, the MapQuest geocoder is disabled.</string>

    <string name="about_title">About…</string>

    <string name="about_version">Version</string>
    <string name="about_build_time">Build Time</string>
    <string name="about_source">Source Code</string>
    <string name="about_source_url" translatable="false">jonapoul/tak-geocoder-plugin</string>
</resources>
